force-app/main/default/objects/Stock_Transfer_Line__c/Stock_Transfer_Line__c.object-meta.xml
<CustomObject>
    <label>Stock Transfer Line</label>
    <pluralLabel>Stock Transfer Lines</pluralLabel>
    <nameField>
        <label>Transfer Line Number</label>
        <displayFormat>TRL-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Line items for inter-warehouse stock transfers with product and quantity details</description>
</CustomObject>