force-app/main/default/objects/Stock_Transfer_Line__c/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <label>Available Stock</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Snapshot of available stock at source warehouse at time of request</description>
</CustomField>