force-app/main/default/objects/Stock_Transfer_Line__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>