force-app/main/default/objects/Stock_Transfer_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Transfer Lines</relationshipLabel>
    <relationshipName>Stock_Transfer_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>