force-app/main/default/objects/Stock_Transfer_Line__c/fields/Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty__c</fullName>
    <label>Received Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>