force-app/main/default/objects/Stock_Transfer_Line__c/fields/Short_Qty__c.field-meta.xml
<CustomField>
    <fullName>Short_Qty__c</fullName>
    <label>Short Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>IF(OR(ISBLANK(Approved_Qty__c), ISBLANK(Received_Qty__c)), 0, Approved_Qty__c - Received_Qty__c)</formula>
</CustomField>