force-app/main/default/objects/Stock_Transfer_Line__c/validationRules/Requested_Qty_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Qty_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Qty__c &lt;= 0</errorConditionFormula>
    <errorMessage>Requested quantity must be greater than zero.</errorMessage>
</ValidationRule>